@@ -36,7 +36,7 @@
             <p>The inverse of a matrix is key.  Here is how you can get one if you know how to row-reduce.</p>
         </paragraphs>
         <paragraphs>
-            <title><xref ref="theorem-NPNT" acro="NPNT"/></title>
+            <title><xref ref="theorem-NPNF" acro="NPNF"/></title>
             <p>This theorem is a fundamental tool for proving subsequent important theorems, such as <xref ref="theorem-NI" acro="NI"/>.  It may also be the best explantion for the term <q>nonsingular.</q></p>
         </paragraphs>
         <paragraphs>
