@@ -924,7 +924,7 @@
                 <p>More precisely, suppose that <m>A</m> is a square matrix of size <m>n</m> and <m>B=\set{\vectorlist{x}{n}}</m> is a basis of <m>\complex{n}</m>.  Prove that <m>A</m> is nonsingular if and only if <m>C=\set{A\vect{x}_1,\,A\vect{x}_2,\,A\vect{x}_3,\,\dots,\,A\vect{x}_n}</m> is a basis of <m>\complex{n}</m>.  (See also <xref ref="exercise-PD-T33" acro="PD.T33"/>, <xref ref="exercise-MR-T20" acro="MR.T20"/>.)</p>
             </statement>
             <solution xml:id="solution-B-T50">
-                <p>Our first proof relies mostly on definitions of linear independence and spanning, which is a good exercise.  The second proof is shorter and turns on a technical result from our work with matrix inverses, <xref ref="theorem-NPNT" acro="NPNT"/>.</p>
+                <p>Our first proof relies mostly on definitions of linear independence and spanning, which is a good exercise.  The second proof is shorter and turns on a technical result from our work with matrix inverses, <xref ref="theorem-NPNF" acro="NPNF"/>.</p>
                 <proof>
                     <case direction="forward">
                         <p>Assume that <m>A</m> is nonsingular and prove that <m>C</m> is a basis of <m>\complex{n}</m>.  First show that <m>C</m> is linearly independent.  Work on a relation of linear dependence on <m>C</m>,<md>
@@ -1015,7 +1015,7 @@
                     <p>Now for a second proof.  Take the vectors for <m>B</m> and use them as the columns of a matrix, <m>G=\matrixcolumns{x}{n}</m>.  By <xref ref="theorem-CNMB" acro="CNMB"/>, because we have the hypothesis that <m>B</m> is a basis of <m>\complex{n}</m>, <m>G</m> is a nonsingular matrix.  Notice that the columns of <m>AG</m> are exactly the vectors in the set <m>C</m>, by <xref ref="definition-MM" acro="MM"/>.<md>
                         <mrow>A\text{ nonsingular}
                         &amp;\iff AG\text{ nonsingular}&amp;&amp;
-                            <xref ref="theorem-NPNT" acro="NPNT"/></mrow>
+                            <xref ref="theorem-NPNF" acro="NPNF"/></mrow>
                         <mrow>&amp;\iff C\text{ basis for }\complex{n}&amp;&amp;
                             <xref ref="theorem-CNMB" acro="CNMB"/></mrow>
                     </md>That was easy!</p>
