@@ -248,7 +248,7 @@
                 </case>
             </proof>
         </theorem>
-        <p>As an equivalence (Proof Technique<nbsp/><xref ref="technique-E" acro="E" text="global"/>), we could restate this result as the contrapositive (Proof Technique<nbsp/><xref ref="technique-CP" acro="CP" text="global"/>) by negating each statement, so it would read <q><m>\alpha\beta\neq 0</m> if and only if <m>\alpha\neq 0</m> and <m>\beta\neq 0</m>.</q>  After you have learned more about nonsingular matrices and matrix multiplication, you should compare this result with <xref ref="theorem-NPNT" acro="NPNT"/>.</p>
+        <p>As an equivalence (Proof Technique<nbsp/><xref ref="technique-E" acro="E" text="global"/>), we could restate this result as the contrapositive (Proof Technique<nbsp/><xref ref="technique-CP" acro="CP" text="global"/>) by negating each statement, so it would read <q><m>\alpha\beta\neq 0</m> if and only if <m>\alpha\neq 0</m> and <m>\beta\neq 0</m>.</q>  After you have learned more about nonsingular matrices and matrix multiplication, you should compare this result with <xref ref="theorem-NPNF" acro="NPNF"/>.</p>
     </subsection>
     <subsection xml:id="subsection-CNO-CCN" acro="CCN">
         <title>Conjugates of Complex Numbers</title>
