@@ -577,7 +577,7 @@
                         <mrow>&amp;=I_n&amp;&amp;
                             <xref ref="definition-SUV" acro="SUV"/></mrow>
                     </md></p>
-                    <p>So the matrix <m>B</m> is a <q>right-inverse</q> for <m>A</m>.  By <xref ref="theorem-NMRRI" acro="NMRRI"/>, <m>I_n</m> is a nonsingular matrix, so by <xref ref="theorem-NPNT" acro="NPNT"/> both <m>A</m> and <m>B</m> are nonsingular.  Thus, in particular, <m>A</m> is nonsingular.  (<xref ref="travisosborne"/> contributed to this proof.)</p>
+                    <p>So the matrix <m>B</m> is a <q>right-inverse</q> for <m>A</m>.  By <xref ref="theorem-NMRRI" acro="NMRRI"/>, <m>I_n</m> is a nonsingular matrix, so by <xref ref="theorem-NPNF" acro="NPNF"/> both <m>A</m> and <m>B</m> are nonsingular.  Thus, in particular, <m>A</m> is nonsingular.  (<xref ref="travisosborne"/> contributed to this proof.)</p>
                 </case>
             </proof>
         </theorem>
@@ -1530,7 +1530,7 @@
                 <p>Suppose that <m>A</m> is an <m>m\times n</m> matrix and <m>B</m> is an <m>n\times m</m> matrix where <m>AB</m> is a nonsingular matrix.  Prove that<ol>
                     <li><m>\nsp{B}=\set{\zerovector}</m></li>
                     <li><m>\csp{B}\cap\nsp{A}=\set{\zerovector}</m></li>
-                </ol>Discuss the case when <m>m=n</m> in connection with <xref ref="theorem-NPNT" acro="NPNT"/>.</p>
+                </ol>Discuss the case when <m>m=n</m> in connection with <xref ref="theorem-NPNF" acro="NPNF"/>.</p>
             </statement>
             <solution xml:id="solution-CRS-T45">
                 <p>First, <m>\zerovector\in\nsp{B}</m> trivially.  Now suppose that <m>\vect{x}\in\nsp{B}</m>.  Then<md>
@@ -1550,7 +1550,7 @@
                     <mrow>&amp;=\zerovector&amp;&amp;
                         \vect{y}\in\nsp{A}</mrow>
                 </md>.  Since we have assumed <m>AB</m> is nonsingular, <xref ref="definition-NM" acro="NM"/> implies that <m>\vect{x}=\zerovector</m>.  Then <m>\vect{y}=B\vect{x}=B\zerovector=\zerovector</m>.</p>
-                <p>When <m>AB</m> is nonsingular and <m>m=n</m> we know that the first condition, <m>\nsp{B}=\set{\zerovector}</m>, means that <m>B</m> is nonsingular (<xref ref="theorem-NMTNS" acro="NMTNS"/>).  Because <m>B</m> is nonsingular <xref ref="theorem-CSNM" acro="CSNM"/> implies that <m>\csp{B}=\complex{m}</m>.  In order to have the second condition fulfilled, <m>\csp{B}\cap\nsp{A}=\set{\zerovector}</m>, we must realize that <m>\nsp{A}=\set{\zerovector}</m>.  However, a second application of <xref ref="theorem-NMTNS" acro="NMTNS"/> shows that <m>A</m> must be nonsingular.  This reproduces <xref ref="theorem-NPNT" acro="NPNT"/>.</p>
+                <p>When <m>AB</m> is nonsingular and <m>m=n</m> we know that the first condition, <m>\nsp{B}=\set{\zerovector}</m>, means that <m>B</m> is nonsingular (<xref ref="theorem-NMTNS" acro="NMTNS"/>).  Because <m>B</m> is nonsingular <xref ref="theorem-CSNM" acro="CSNM"/> implies that <m>\csp{B}=\complex{m}</m>.  In order to have the second condition fulfilled, <m>\csp{B}\cap\nsp{A}=\set{\zerovector}</m>, we must realize that <m>\nsp{A}=\set{\zerovector}</m>.  However, a second application of <xref ref="theorem-NMTNS" acro="NMTNS"/> shows that <m>A</m> must be nonsingular.  This reproduces <xref ref="theorem-NPNF" acro="NPNF"/>.</p>
             </solution>
         </exercise>
     </exercises>
