@@ -396,7 +396,7 @@
                 [ 1  0  0]
                 </output>
             </sage>
-            <p>The matrix <c>R</c>, the product of three elementary matrices, can be construed as the collective effect of the three row operations employed.  With more row operations, <c>R</c> might look even less like an identity matrix.  As the product of nonsingular matrices (<xref ref="theorem-EMN" acro="EMN"/>), <c>R</c> is nonsingular (<xref ref="theorem-NPNT" acro="NPNT"/>).</p>
+            <p>The matrix <c>R</c>, the product of three elementary matrices, can be construed as the collective effect of the three row operations employed.  With more row operations, <c>R</c> might look even less like an identity matrix.  As the product of nonsingular matrices (<xref ref="theorem-EMN" acro="EMN"/>), <c>R</c> is nonsingular (<xref ref="theorem-NPNF" acro="NPNF"/>).</p>
             <p>The matrix <c>B</c> above is not in reduced row-echelon form (it was just row-equivalent to <c>A</c>).  What if we were to begin with a matrix and track all of the row operations required to bring the matrix to reduced row-echelon form?  As above, we could form the associated elementary matrices and form their product, creating a single matrix <c>R</c> that captures all of the row operations.</p>
             <p>It turns out we have already done this.  Extended echelon form is the subject of <xref ref="theorem-PEEF" acro="PEEF"/>, whose second conclusion says that <m>B=JA</m>, where <m>A</m> is the original matrix, and <m>B</m> is the row-equivalent matrix in reduced row-echelon form.  Then <m>J</m> is a square nonsingular matrix that is the product of the sequence of elementary matrices associated with the sequence of row operations converting <m>A</m> into <m>B</m>.  There may be many, many different sequences of row operations that convert <m>A</m> to <m>B</m>, but the requirement that extended echelon form be in reduced row-echelon form guarantees that <m>J</m> is unique.</p>
         </computation>
