@@ -16,8 +16,8 @@
         <title>Nonsingular Matrices are Invertible</title>
         <p>We need a couple of technical results for starters.  Some books would call these minor, but essential, results <term>lemmas</term>.  We'll just call 'em theorems.  See Proof Technique<nbsp/><xref ref="technique-LC" acro="LC" text="global"/> for more on the distinction.</p>
         <p>The first of these technical results is interesting in that the hypothesis says something about a product of two square matrices and the conclusion then says the same thing about each individual matrix in the product.  This result has an analogy in the algebra of complex numbers: suppose <m>\alpha,\,\beta\in\complexes</m>, then <m>\alpha\beta\neq 0</m> if and only if <m>\alpha\neq 0</m> and <m>\beta\neq 0</m>.  We can view this result as suggesting that the term <q>nonsingular</q> for matrices is like the term <q>nonzero</q> for scalars.  Consider too that we know singular matrices, as coefficient matrices for systems of equations, will sometimes lead to systems with no solutions, or systems with infinitely many solutions (<xref ref="theorem-NMUS" acro="NMUS"/>).  What do linear equations with zero look like?  Consider <m>0x=5</m>, which has no solution, and <m>0x=0</m>, which has infinitely many solutions.  In the algebra of scalars, zero is exceptional (meaning different, not better), and in the algebra of matrices, singular matrices are also the exception.  While there is only one zero scalar, and there are infinitely many singular matrices, we will see that singular matrices are a distinct minority.</p>
-        <theorem xml:id="theorem-NPNT" acro="NPNT">
-            <title>Nonsingular Product has Nonsingular Terms</title>
+        <theorem xml:id="theorem-NPNF" acro="NPNF">
+            <title>Nonsingular Product has Nonsingular Factors</title>
             <idx>
                 <h>nonsingular matrix</h>
                 <h>product of nonsingular matrices</h>
@@ -79,7 +79,7 @@
                 <p>Suppose <m>A</m> and <m>B</m> are  square matrices of size <m>n</m> such that <m>AB=I_n</m>.  Then <m>BA=I_n</m>.</p>
             </statement>
             <proof>
-                <p>The matrix <m>I_n</m> is nonsingular (since it row-reduces easily to <m>I_n</m>, <xref ref="theorem-NMRRI" acro="NMRRI"/>).  So <m>A</m> and <m>B</m> are nonsingular by <xref ref="theorem-NPNT" acro="NPNT"/>, so in particular <m>B</m> is nonsingular.  We can therefore apply <xref ref="theorem-CINM" acro="CINM"/> to assert the existence of a matrix <m>C</m> so that <m>BC=I_n</m>.  This application of <xref ref="theorem-CINM" acro="CINM"/> could be a bit confusing, mostly because of the names of the matrices involved.  <m>B</m> is nonsingular, so there must be a <q>right-inverse</q> for <m>B</m>, and we are calling it <m>C</m>.</p>
+                <p>The matrix <m>I_n</m> is nonsingular (since it row-reduces easily to <m>I_n</m>, <xref ref="theorem-NMRRI" acro="NMRRI"/>).  So <m>A</m> and <m>B</m> are nonsingular by <xref ref="theorem-NPNF" acro="NPNF"/>, so in particular <m>B</m> is nonsingular.  We can therefore apply <xref ref="theorem-CINM" acro="CINM"/> to assert the existence of a matrix <m>C</m> so that <m>BC=I_n</m>.  This application of <xref ref="theorem-CINM" acro="CINM"/> could be a bit confusing, mostly because of the names of the matrices involved.  <m>B</m> is nonsingular, so there must be a <q>right-inverse</q> for <m>B</m>, and we are calling it <m>C</m>.</p>
                 <p>Now<md>
                     <mrow>BA
                     &amp;=(BA)I_n&amp;&amp;
@@ -113,7 +113,7 @@
             </statement>
             <proof>
                 <case direction="backward">
-                    <p>Since <m>A</m> is invertible, we can write <m>I_n=A\inverse{A}</m> (<xref ref="definition-MI" acro="MI"/>).  Notice that <m>I_n</m> is nonsingular (<xref ref="theorem-NMRRI" acro="NMRRI"/>) so <xref ref="theorem-NPNT" acro="NPNT"/> implies that <m>A</m> (and <m>\inverse{A}</m>) is nonsingular.</p>
+                    <p>Since <m>A</m> is invertible, we can write <m>I_n=A\inverse{A}</m> (<xref ref="definition-MI" acro="MI"/>).  Notice that <m>I_n</m> is nonsingular (<xref ref="theorem-NMRRI" acro="NMRRI"/>) so <xref ref="theorem-NPNF" acro="NPNF"/> implies that <m>A</m> (and <m>\inverse{A}</m>) is nonsingular.</p>
                 </case>
                 <case direction="forward">
                     <p>Suppose now that <m>A</m> is nonsingular.  By <xref ref="theorem-CINM" acro="CINM"/> we find <m>B</m> so that <m>AB=I_n</m>.  Then <xref ref="theorem-OSIS" acro="OSIS"/> tells us that <m>BA=I_n</m>.  So <m>B</m> is <m>A</m>'s inverse, and by construction, <m>A</m> is invertible.</p>
@@ -379,7 +379,7 @@
                 <p>Suppose that <m>U</m> is a unitary matrix of size <m>n</m>.  Then <m>U</m> is nonsingular, and <m>\inverse{U}=\adjoint{U}</m>.</p>
             </statement>
             <proof>
-                <p>By <xref ref="definition-UM" acro="UM"/>, we know that <m>\adjoint{U}U=I_n</m>.  The matrix <m>I_n</m> is nonsingular (since it row-reduces easily to <m>I_n</m>, <xref ref="theorem-NMRRI" acro="NMRRI"/>).  So by <xref ref="theorem-NPNT" acro="NPNT"/>, <m>U</m> and <m>\adjoint{U}</m> are both nonsingular matrices.</p>
+                <p>By <xref ref="definition-UM" acro="UM"/>, we know that <m>\adjoint{U}U=I_n</m>.  The matrix <m>I_n</m> is nonsingular (since it row-reduces easily to <m>I_n</m>, <xref ref="theorem-NMRRI" acro="NMRRI"/>).  So by <xref ref="theorem-NPNF" acro="NPNF"/>, <m>U</m> and <m>\adjoint{U}</m> are both nonsingular matrices.</p>
                 <p>The equation <m>\adjoint{U}U=I_n</m> gets us halfway to an inverse of <m>U</m>, and <xref ref="theorem-OSIS" acro="OSIS"/> tells us that then <m>U\adjoint{U}=I_n</m> also.  So <m>U</m> and <m>\adjoint{U}</m> are inverses of each other (<xref ref="definition-MI" acro="MI"/>).</p>
             </proof>
         </theorem>
@@ -727,7 +727,7 @@
         </exercise>
         <exercise number="M15" xml:id="exercise-MINM-M15">
             <statement contributor="chrisblack">
-                <p>If <m>A</m> and <m>B</m> are <m>n \times n</m> matrices, <m>A</m> is nonsingular, and <m>B</m> is singular, show directly that <m>AB</m> is singular, without using <xref ref="theorem-NPNT" acro="NPNT"/>.</p>
+                <p>If <m>A</m> and <m>B</m> are <m>n \times n</m> matrices, <m>A</m> is nonsingular, and <m>B</m> is singular, show directly that <m>AB</m> is singular, without using <xref ref="theorem-NPNF" acro="NPNF"/>.</p>
             </statement>
             <solution xml:id="solution-MINM-M15" contributor="chrisblack">
                 <p>If <m>B</m> is singular, then there exists a vector <m>\vect{x}\ne\zerovector</m> so that <m>\vect{x}\in \nsp{B}</m>.  Thus, <m>B\vect{x} = \vect{0}</m>, so <m>A(B\vect{x}) = (AB)\vect{x} = \zerovector</m>, so <m>\vect{x}\in\nsp{AB}</m>.  Since the null space of <m>AB</m> is not trivial, <m>AB</m> is a singular matrix.</p>
@@ -758,7 +758,7 @@
                     0&amp;0\\1&amp;0
                     \end{bmatrix}</mrow>
                 </md>.Then <m>A</m> is already in reduced row-echelon form, and by swapping rows, <m>B</m> row-reduces to <m>A</m>.  So the product of the row-echelon forms of <m>A</m> is <m>AA=A\neq\zeromatrix</m>.  However, the product <m>AB</m> is the <m>2\times 2</m> zero matrix, which is in reduced-echelon form, and not equal to <m>AA</m>.  When you get there, <xref ref="theorem-PEEF" acro="PEEF"/> or <xref ref="theorem-EMDRO" acro="EMDRO"/> might shed some light on why we would not expect this statement to be true in general.</p>
-                <p>If <m>A</m> and <m>B</m> are nonsingular, then <m>AB</m> is nonsingular (<xref ref="theorem-NPNT" acro="NPNT"/>), and all three matrices <m>A</m>, <m>B</m> and <m>AB</m> row-reduce to the identity matrix (<xref ref="theorem-NMRRI" acro="NMRRI"/>).  By <xref ref="theorem-MMIM" acro="MMIM"/>, the desired relationship is true.</p>
+                <p>If <m>A</m> and <m>B</m> are nonsingular, then <m>AB</m> is nonsingular (<xref ref="theorem-NPNF" acro="NPNF"/>), and all three matrices <m>A</m>, <m>B</m> and <m>AB</m> row-reduce to the identity matrix (<xref ref="theorem-NMRRI" acro="NMRRI"/>).  By <xref ref="theorem-MMIM" acro="MMIM"/>, the desired relationship is true.</p>
             </solution>
         </exercise>
         <exercise number="T10" xml:id="exercise-MINM-T10">
