@@ -2097,7 +2097,7 @@
         </exercise>
         <exercise number="M83" xml:id="exercise-MR-M83">
             <statement>
-                <p>In light of <xref ref="theorem-MRCLT" acro="MRCLT"/> and <xref ref="theorem-IMR" acro="IMR"/>, write a short comparison of <xref ref="theorem-NPNT" acro="NPNT"/> and <xref ref="exercise-IVLT-T40" acro="IVLT.T40"/>.</p>
+                <p>In light of <xref ref="theorem-MRCLT" acro="MRCLT"/> and <xref ref="theorem-IMR" acro="IMR"/>, write a short comparison of <xref ref="theorem-NPNF" acro="NPNF"/> and <xref ref="exercise-IVLT-T40" acro="IVLT.T40"/>.</p>
             </statement>
         </exercise>
         <exercise number="T20" xml:id="exercise-MR-T20">
