@@ -347,7 +347,7 @@
             <p>The only portion of these commands that may be unfamilar is the last one.  The command <c>range(n)</c> is incredibly useful, as it will create a list of the integers from <c>0</c> up to, <em>but not including</em>, <c>n</c>.  (We saw this command briefly in Sage<nbsp/><xref ref="sage-FDV" acro="FDV" text="global"/>.)  So, for example, <c>range(3) == [0,1,2]</c> is <c>True</c>.  Pivots are returned as a <q>tuple</q> which is very much like a list, except we cannot change the contents.  We can see the difference by the way the tuple prints with parentheses (<c>(,)</c>) rather than brackets (<c>[,]</c>).  We can convert a list to a tuple with the <c>tuple()</c> command, in order to make the comparison succeed.</p>
             <p>How do we tell if the reduced row-echelon form of the augmented matrix of a system of equations represents a system with a unique solution?  First, the system must be consistent, which by <xref ref="theorem-RCLS" acro="RCLS"/> means the last column is not a pivot column.  Then with a consistent system we need to insure there are no free variables.  This happens if and only if the remaining columns are all pivot columns, according to <xref ref="theorem-FVCS" acro="FVCS"/>, thus the test used in the last compute cell.</p>
         </computation>
-        <p>Finally, you may have wondered why we refer to a matrix as <em>nonsingular</em> when it creates systems of equations with <em>single</em> solutions (<xref ref="theorem-NMUS" acro="NMUS"/>)!  I have wondered the same thing.  We will have an opportunity to address this just before <xref ref="theorem-NPNT" acro="NPNT" />, and again when we get to <xref ref="theorem-SMZD" acro="SMZD"/>.  Can you wait that long?</p>
+        <p>Finally, you may have wondered why we refer to a matrix as <em>nonsingular</em> when it creates systems of equations with <em>single</em> solutions (<xref ref="theorem-NMUS" acro="NMUS"/>)!  I have wondered the same thing.  We will have an opportunity to address this just before <xref ref="theorem-NPNF" acro="NPNF" />, and again when we get to <xref ref="theorem-SMZD" acro="SMZD"/>.  Can you wait that long?</p>
     </subsection>
     <reading-questions xml:id="readingquestions-NM">
         <exercise xml:id="reading-NM-1">
