@@ -538,7 +538,7 @@
                 <p>Suppose that <m>A</m> and <m>B</m> are square matrices of the same size.  Then <m>\detname{AB}=\detname{A}\detname{B}</m>.</p>
             </statement>
             <proof>
-                <p>This proof is constructed in two cases.  First, suppose that <m>A</m> is singular.  Then <m>\detname{A}=0</m> by <xref ref="theorem-SMZD" acro="SMZD"/>.  By the contrapositive of <xref ref="theorem-NPNT" acro="NPNT"/>, <m>AB</m> is singular as well.  So by a second application of <xref ref="theorem-SMZD" acro="SMZD"/>, <m>\detname{AB}=0</m>.  Putting it all together<md>
+                <p>This proof is constructed in two cases.  First, suppose that <m>A</m> is singular.  Then <m>\detname{A}=0</m> by <xref ref="theorem-SMZD" acro="SMZD"/>.  By the contrapositive of <xref ref="theorem-NPNF" acro="NPNF"/>, <m>AB</m> is singular as well.  So by a second application of <xref ref="theorem-SMZD" acro="SMZD"/>, <m>\detname{AB}=0</m>.  Putting it all together<md>
                     <mrow>\detname{AB}=0=0\,\detname{B}=\detname{A}\detname{B}</mrow>
                 </md>as desired.</p>
                 <p>For the second case, suppose that <m>A</m> is nonsingular.  By <xref ref="theorem-NMPEM" acro="NMPEM"/> there are elementary matrices <m>E_{1},\,E_{2},\,E_{3},\,\dots,\,E_{s}</m> such that <m>A=E_1E_2E_3\dots E_s</m>.  Then<md>
@@ -794,7 +794,7 @@
         </exercise>
         <exercise number="T10" xml:id="exercise-PDM-T10">
             <statement>
-                <p><xref ref="theorem-NPNT" acro="NPNT"/> says that if the product of square matrices <m>AB</m> is nonsingular, then the individual matrices <m>A</m> and <m>B</m> are nonsingular also.  Construct a new proof of this result making use of theorems about determinants of matrices.</p>
+                <p><xref ref="theorem-NPNF" acro="NPNF"/> says that if the product of square matrices <m>AB</m> is nonsingular, then the individual matrices <m>A</m> and <m>B</m> are nonsingular also.  Construct a new proof of this result making use of theorems about determinants of matrices.</p>
             </statement>
         </exercise>
         <exercise number="T15" xml:id="exercise-PDM-T15">
