@@ -1162,7 +1162,7 @@
                 <p>Suppose that <m>A</m> and <m>B</m> are similar matrices, with <m>A</m> nonsingular.  Prove that <m>B</m> is nonsingular, and that <m>\inverse{A}</m> is similar to <m>\inverse{B}</m>.</p>
             </statement>
             <solution xml:id="solution-SD-T16" contributor="stevecanfield">
-                <p><m>A</m> being similar to <m>B</m> means that there exists an <m>S</m> such that <m>A=\inverse{S}BS</m>. So, <m>B=SA\inverse{S}</m> and because <m>S</m>, <m>A</m>, and <m>\inverse{S}</m> are nonsingular, by <xref ref="theorem-NPNT" acro="NPNT"/>, <m>B</m> is nonsingular.<md>
+                <p><m>A</m> being similar to <m>B</m> means that there exists an <m>S</m> such that <m>A=\inverse{S}BS</m>. So, <m>B=SA\inverse{S}</m> and because <m>S</m>, <m>A</m>, and <m>\inverse{S}</m> are nonsingular, by <xref ref="theorem-NPNF" acro="NPNF"/>, <m>B</m> is nonsingular.<md>
                     <mrow>\inverse{A}
                     &amp;= \inverse{\left(\inverse{S}BS\right)}&amp;&amp;
                         <xref ref="definition-SIM" acro="SIM"/></mrow>
