@@ -117,7 +117,7 @@
         <!--  Diagonalizable matrices, large eigenspace -->
         <xref ref="theorem-RREFU" acro="RREFU"/>,
         <xref ref="theorem-NMUS" acro="NMUS"/>,
-        <xref ref="theorem-NPNT" acro="NPNT"/>,
+        <xref ref="theorem-NPNF" acro="NPNF"/>,
         <xref ref="theorem-TTMI" acro="TTMI"/>,
         <xref ref="theorem-GSP" acro="GSP"/>,
         <xref ref="theorem-ELIS" acro="ELIS"/>,
