@@ -21,6 +21,7 @@ Change: Theorems SSNS, BNS need case when n = r (Ken Price)
 Change: Example NIDAU, in discussion, "are" to "is" (Lukas Karoly)
 Change: Exercise LT.C43, clarify versions of the zero vector (Jake Rizzo)
 Change: Solution SLT.C27, "are" to "is" (Ashlen Isbell)
+Change: Rename Theorem NPNT as Theorem NPNF (Sam Webb)
 Typo: Exercise SSLE.C53, add second condition to quoted problem (Jaime Ruiz)
 Typo: Theorem PSPHS, stray addition sign in the proof (Rachel Chaiser)
 Typo: Exercise MM.T12, correct reference, reword slightly (Matt Fergoda)
